appId: ${APP_ID}
name: import-pubky-mnemonic
env:
  RECOVERY_PHRASE: abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon about
---
- launchApp:
    clearState: true
- runFlow: ../shared/onboarding.yaml
- tapOn:
    id: AddPubkyButton
- waitForAnimationToEnd
- assertVisible:
    id: add-pubky-title
- tapOn:
    id: AddPubkyImport
- waitForAnimationToEnd
- assertVisible:
    id: RecoveryPhraseButton
- tapOn:
    id: RecoveryPhraseButton
- waitForAnimationToEnd
- assertVisible:
    id: MnemonicWordInput-1
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: MnemonicWordInput-1
      - inputText: abandon
      - tapOn:
          id: MnemonicWordInput-2
      - inputText: ab
      - tapOn: ability
      - tapOn:
          id: MnemonicWordInput-1
      - runFlow:
          file: ../shared/clear-input-text.yaml
          env:
            INPUT_ID: MnemonicWordInput-1
      - runFlow:
          file: ../shared/paste-system-clipboard.yaml
          env:
            INPUT_ID: MnemonicWordInput-1
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          id: MnemonicWordInput-1
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-2
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-3
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-4
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-5
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-6
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-7
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-8
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-9
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-10
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-11
      - inputText: ab
      - tapOn: abandon
      - tapOn:
          id: MnemonicWordInput-12
      - inputText: abo
      - tapOn: about
- extendedWaitUntil:
    visible:
      id: MnemonicImportButton
    timeout: 5000
- tapOn:
    id: MnemonicImportButton
- extendedWaitUntil:
    visible:
      id: import-success-title
    timeout: 30000
- tapOn:
    id: ImportSuccessButton
