appId: ${APP_ID}
---
- runFlow:
    file: open-link.yaml
    env:
      URL: ${AUTH_URL}
- runFlow:
    when:
      notVisible:
        id: ConfirmAuthAuthorizeButton
    commands:
      - runFlow:
          file: open-link.yaml
          env:
            URL: ${AUTH_URL}
- extendedWaitUntil:
    visible:
      id: ConfirmAuthAuthorizeButton
    timeout: 30000
- tapOn:
    id: ConfirmAuthAuthorizeButton
- extendedWaitUntil:
    visible:
      id: ConfirmAuthSuccessButton
    timeout: 30000
- tapOn:
    id: ConfirmAuthSuccessButton
